update http-kit